# GAIA-Environment-Mediated-Coordination-for-Multi-Agent-LLM-Collaboration

./: .env.example  .gitignore  DOCUMENTATION.md  LICENSE  README.md  REPRODUCE.md  pyproject.toml
data/gsm8k/: brutal_problems.json  correlated_failure_problems.json  correlated_failure_problems_all15.json  correlated_failure_problems_expanded.json  extreme_problems.json  extreme_v2_problems.json  hard_problems.json  problems.json
data/miniwob/: tasks.json
data/puzzle/: puzzles.json  puzzles_6x4.json
data/scheduling/: problems.json
experiments/: run_queue.sh  run_queue2.sh
experiments/cycle4/: run_groq_chain.sh
experiments/gsm8k/: FINDINGS.md
experiments/nx5b_branch_regime/: DESIGN.md
experiments/puzzle/: FINDINGS.md
experiments/viz/: POSTER_CONTENT.md  analyze_agent_behavior.py  causal_mediation.py  coordination_fingerprint.py  cross_experiment_analysis.py  diversity_decomposition.py  generate_extra_figures.py  generate_poster_figures.py  information_flow.py  interaction_graph_centrality.py  regen_fig1_large_text.py  scaling_and_latency.py  visualize_blackboard_trace.py  visualize_branch_merge.py  visualize_conflict_trace.py
gaia/: __init__.py  micro_checkers.py
gaia/agents/: __init__.py  base.py  coder.py  critic.py  edge_case.py  planner.py  verifier.py
gaia/benchmarks/: __init__.py
gaia/blackboard/: __init__.py  blackboard.py  models.py  storage.py  (+1 more)
tests/: scratch_test.py  scratch_test3.py  scratch_test_3_problems.py  test_3.py  test_checkpoint.py  test_framework.py  test_method1.py  test_runner_3.py  validate_implementation.py
(+4126 files in other folders)
